feat: Add endpoint for Trackings and Payments
